	NX-1199 (SNMP credentials per-zone)
	NX-1219 (Add 'created' and 'last login' columns to User Manager)
	NX-1271 (Implemented internal server topology)
	NX-1386 (Implemented units for Server Variables)


*
* 2.2.9
*

- New NXSL functions: Base64Decode, Base64Encode, EventCodeFromName, EventNameFromCode
- Original event name passed to alarm timeout event as 5th parameter


*
* 2.2.8
*

- Delayed actions in event processing policy
- Raw event data stored in event log
- New hook scripts: PostObjectCreate and DiscoveryPoll
- Implemented watchdog functionality for external subagents
- SNMP port and context can be specified in NXSL function CreateSNMPTransport
- Fixed Summary DCI table fail when row limit set
- Fixed menu path creation for Summary DCI Table and folder creation for graph view
- New command line options for Windows agent installer: /FORCECREATECONFIG, /LOGFILE=, /FILESTORE=, /CONFIGINCLUDEDIR=
- Server optimization for high load
- Fixed SQL errors during database import or migration
- New dashboard element "Port view"
- Fixed issues:
	NX-1186 (WebUI does not show objects on geo map)
	NX-1377 (Can't upgrade sqlite database from version 21.4 to 21.5 with error "Unable to set not null constraint")
	NX-1435 (AgentTunnelListenPort configuration parameter is missing from config table)
	NX-1458 (DB upgrade from 0.454 to 0.455 failing for sqlite)
	NX-1459 (Online upgrade for 22.21 failed on sqlite)
	NX-1471 (Add option to create node in maintenance mode)
	NX-1472 (Physical Hyper-V Hosts are reporting as Node Type "Virtual" in 2.2.7)
	NX-1480 (Varbinds in SNMP Traps restricted to 255 characters)
	NX-1481 (Configuration option to disable topology based event correlation)
	NX-1482 (NetXMS server ignoring Syslog and Traps from devices in a Zone which are sending directly to NetXMS server)
	NX-1484 (Corrupted event messages if MySQL is used as backend database)
	NX-1488 ("Use active thresholds" checkbox gets checked after clicking on OK in map link properties)